# astronomical-gravity

./: Cargo.toml  README.md  generate_input.py  plotter.py  run_local.sh  test_AR_proj.py
resources/: result_100.csv  result_1000.csv  result_182.csv  test_res.csv
src/: main.rs
src/sim/: err.rs  mod.rs  proc.rs  star.rs
