[package]
name = "AR_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.6.0", features = ["derive"] }
clap =  { version = "4.0.18", features = ["derive"] }

log = "0.4.0"
env_logger = "0.9.0"